--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -28,8 +28,8 @@
   <main>
     <form autocomplete="off" id="form">
       <h1 id="formTitle">Restaurant toevoegen</h1>
-      <input id="formName" type="text" placeholder="Naam van Restaurant">
-      <input id="formDescription" type="text" placeholder="Beschrijving van estaurant">
+      <input id="formName" type="text" placeholder="Naam van restaurant">
+      <input id="formDescription" type="text" placeholder="Beschrijving van restaurant">
       <div id="geocoder"></div>
       <input id="formSubmit" type="submit" value="TOEVOEGEN">
     </form>
