restaurant card style fix

--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -31,6 +31,7 @@
       <input id="formName" type="text" placeholder="Naam van restaurant">
       <input id="formDescription" type="text" placeholder="Beschrijving van restaurant">
       <div id="geocoder"></div>
+      <h5 id="formError"></h5>
       <input id="formSubmit" type="submit" value="TOEVOEGEN">
     </form>
 
