--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -17,10 +17,10 @@
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a id="active" href="">Recepten</a></li>
+        <li id="menuItem"><a id="active" href="">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
-        <li id="menuItem"><a href="./addRestaurant.html">restaurant toevoegen</a></li>
-        <li id="menuItem"><a href="">Mijn Profiel</a></li>
+        <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
+        <li id="menuItem"><a href="">My Profile</a></li>
       </ul>
     </nav>
   </header>
