--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -19,22 +19,22 @@
         <img src="./images/logo.png" alt="">
       </div>
       <ul>
-        <li id="menuItem"><a href="./index.html">Recepten</a></li>
+        <li id="menuItem"><a href="./index.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
-        <li id="menuItem"><a id="active" href="">restaurant toevoegen</a></li>
-        <li id="menuItem"><a href="">Mijn Profiel</a></li>
+        <li id="menuItem"><a id="active" href="">Add restaurant</a></li>
+        <li id="menuItem"><a href="">My profile</a></li>
       </ul>
     </nav>
 
   </header>
   <main>
     <form autocomplete="off" id="form">
-      <h1 id="formTitle">Restaurant toevoegen</h1>
-      <input id="formName" type="text" placeholder="Naam van restaurant">
-      <input id="formDescription" type="text" placeholder="Beschrijving van restaurant">
+      <h1 id="formTitle">Add Restaurant</h1>
+      <input id="formName" type="text" placeholder="Name">
+      <input id="formDescription" type="text" placeholder="Description">
       <div id="geocoder"></div>
       <h5 id="formError"></h5>
-      <input id="formSubmit" type="submit" value="TOEVOEGEN">
+      <input id="formSubmit" type="submit" value="add">
     </form>
 
   </main>
