--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -8,6 +8,7 @@
   <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./css/mapbox.css">
 </head>
 
 <body>
