--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -28,20 +28,10 @@
   <main>
     <div id="filterDiv"></div>
     <div id="searchResults">
-      <div id="card">
-        <div id="cardImageDiv">
-          <div id="cardInfoStars">
-            <h6 id="cardInfoText">4.0</h6>
-          </div>
-          <img id="cardImage" src="${data.results[key].image}" alt="">
-        </div>
-        <h2 id="cardTitle">${data.results[key].title}</h2>
-        <button class="cardButton" id="${data.results[key].id}">Bekijk</button>
-      </div>
     </div>
   </main>
 
-  <script src="./index.js"></script>
+  <script src="./js/searchresults.js"></script>
 </body>
 
 </html>
