--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
                 <li id="menuItem"><a id="active" href="">Recipes</a></li>
                 <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
                 <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
-                <li id="menuItem"><a href="">Mijn profile</a></li>
+                <li id="menuItem"><a href="">My profile</a></li>
             </ul>
         </nav>
     </header>
