--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@
         </form>
 
         <div id="favorites">
-            <h2 id="favoritesTitle">Your search results</h2>
+            <h2 id="favoritesTitle">Your favorites</h2>
             <div id="cards">
             </div>
         </div>
