added not found

--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -33,7 +33,7 @@
     </div>
     <div id='map'></div>
   </div>
-  <script src="./restaurants.js"></script>
+  <script src="./js/restaurants.js"></script>
 </body>
 
 </html>
