--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -26,7 +26,9 @@
   </header>
 
   <main>
-    <div id="filterDiv"></div>
+    <div id="filterDiv">
+      <div id="sortFilters"></div>
+    </div>
     <div id="searchResults">
     </div>
   </main>
