--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <form autocomplete="off" id="form" action="">
-            <h1 id="formTitle">What to eat?</h1>
+            <h1 id="formTitle">Are you hungry?</h1>
             <input id="formSearchbar" type="search" placeholder="Ingredients, recipes, …">
             <div id="formFilters">
                 <div id="formFilter">
