--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -7,6 +7,11 @@
   <title>Glutenvrij Dichtbij - Recipes</title>
   <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+  <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'>
+  </script>
+  <link rel='stylesheet'
+    href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css'
+    type='text/css' />
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./css/mapbox.css">
 
