--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a id="active" href="">Recipes</a></li>
+        <li id="menuItem"><a id="active" href="./index.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="">My Profile</a></li>
@@ -27,7 +27,19 @@
 
   <main>
     <div id="filterDiv">
-      <div id="sortFilters"></div>
+      <div id="sortFilters">
+        <h3>Filter:</h3>
+        <form action="">
+          <input type="radio" id="rate1" name="rating" value="5">
+          <label for="rate1">5 sterren</label><br>
+          <input type="radio" id="rate2" name="rating" value="4">
+          <label for="rate2">4 sterren</label><br>
+          <input type="radio" id="rate3" name="rating" value="3">
+          <label for="rate3">3 sterren</label><br>
+          <input type="radio" id="rate4" name="rating" value="2">
+          <label for="rate4">2 of minder sterren</label><br><br>
+        </form>
+      </div>
     </div>
     <div id="searchResults">
     </div>
