--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -27,8 +27,10 @@
   <main>
     <div id="recipe">
     </div>
-    <div id="similarRecipes">
-    </div>
+    <div id="similar">
+      <div id="similarRecipes">
+      </div>
+    </div>  
   </main>
   <script src="./js/recipeResult.js"></script>
 </body>
