--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -21,7 +21,9 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <img src="./images/logo.png" alt="logo">
+        <a href="./index.html">
+          <img src="./images/logo.png" alt="">
+        </a>
       </div>
       <ul>
         <li id="menuItem"><a href="./index.html">Recipes</a></li>
