--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -13,7 +13,9 @@
     <nav id="menu">
       <div id="logoBackground">
         <a href="./index.html">
-          <img src="./images/logo.png" alt="">
+          <a href="./index.html">
+            <img src="./images/logo.png" alt="">
+          </a>
         </a>
       </div>
       <ul>
