--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -17,7 +17,9 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <img src="./images/logo.png" alt="">
+        <a href="./index.html">
+          <img src="./images/logo.png" alt="">
+        </a>
       </div>
       <ul>
         <li id="menuItem"><a href="./index.html">Recipes</a></li>
