--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./css/mapbox.css">
 </head>
@@ -41,8 +42,8 @@
     </form>
 
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/post.js"></script>
-
 </body>
 
 </html>
