--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./css/mapbox.css">
 
+  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+
 </head>
 
 <body>
