search result fix

--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -79,17 +79,20 @@
         <h3>Sort:</h3>
         <form action="">
           <input type="radio" id="time" name="sort" value="1">
-          <label for="time">COOKING TIME</label><br>
+          <label for="time">Cooking time</label><br>
           <input type="radio" id="healthScore" name="sort" value="1">
-          <label for="healthScore">HEALTH SCORE</label><br>
+          <label for="healthScore">Health score</label><br>
       </div>
       </form>
       <div id="filterFilters">
         <h3>Filter:</h3>
         <form action="">
-          <label><input id="vegetarian" type="radio" name="filter" value="vegetarian">VEGETARIAN</label> <br>
-          <label><input id="vegan" type="radio" name="filter" value="vegan">VEGAN</label><br>
-          <label><input id="fodmap" type="radio" name="filter" value="fodmap">LOW FODMAP</label>
+          <input id="vegetarian" type="radio" name="filter" value="vegetarian">
+          <label for="vegetarian">Vegetarian</label> <br>
+          <input id="vegan" type="radio" name="filter" value="vegan">
+          <label for="vegan">Vegan</label><br>
+          <input id="fodmap" type="radio" name="filter" value="fodmap">
+          <label for="fodmap">Low fodmap</label>
         </form>
       </div>
     </div>
