--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -43,7 +43,7 @@
       </ul>
     </nav>
   </header>
-
+  <div id="loader"></div>
   <div id="mapBorder">
     <div class='sidebar'>
       <div id='restaurants' class='restaurants'></div>
