--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -27,7 +27,9 @@
   <main>
     <div id="recipe">
     </div>
-    <div id="similar">
+    <div id="similarRecipes">
+      <div id="similar">
+      </div>
     </div>
   </main>
   <script src="./js/recipeResult.js"></script>
