--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -108,7 +108,7 @@
     <div id="loader"></div>
     <div id="searchResults"></div>
   </main>
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/searchresults.js"></script>
 </body>
 
