--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -21,14 +21,16 @@
     <div id="loginFormDiv">
       <img src="./images/logoIcon.png" alt="">
       <form action="" id="loginForm">
-        <input id="loginFormEmail" type="text" placeholder="email@email.com">
+        <input id="loginFormName" type="text" placeholder="John Doe">
+        <input id="loginFormEmail" type="email" placeholder="email@email.com">
+        <input id="loginFormPhone" type="number" placeholder="047852145">
         <input id="loginFormPassword" type="password" placeholder="password">
-        <input type="submit" value="LOGIN">
+        <input type="submit" value="REGISTER">
       </form>
-      <h4 id="signupLink">Or <a href="./signup.html">signUp</a></h4>
+      <h4 id="signupLink">Or <a href="./index.html">login</a></h4>
     </div>
   </main>
-  <script src="./js/login.js"></script>
+  <script src="./js/register.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 
