--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -25,12 +25,12 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <a href="./index.html">
+        <a href="./recipes.html">
           <img src="./images/logo.png" alt="">
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a href="./index.html">Recipes</a></li>
+        <li id="menuItem"><a href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a id="active" href="">Add restaurant</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
