--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -31,12 +31,12 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <a href="./index.html">
+        <a href="./recipes.html">
           <img src="./images/logo.png" alt="">
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a href="./index.html">Recipes</a></li>
+        <li id="menuItem"><a href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a id="active" href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurants</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
