--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -19,14 +19,12 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <a href="./index.html">
-          <a href="./index.html">
-            <img src="./images/logo.png" alt="">
-          </a>
+        <a href="./recipes.html">
+          <img src="./images/logo.png" alt="">
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a id="active" href="./index.html">Recipes</a></li>
+        <li id="menuItem"><a id="active" href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="">My Profile</a></li>
