logout + sort fix

--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -34,6 +34,7 @@
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a id="active" href="">Add restaurant</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
+        <li id="" menuItem><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
 
