--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -40,6 +40,7 @@
         <li id="menuItem"><a id="active" href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurants</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
+        <li id="" menuItem><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
   </header>
