--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -28,6 +28,7 @@
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="">My Profile</a></li>
+        <li id="" menuItem><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
   </header>
