--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -34,7 +34,7 @@
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a id="active" href="">Add restaurant</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
-        <li id="" menuItem><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
 
@@ -52,6 +52,7 @@
   </main>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/post.js"></script>
+  <script src="./js/checksignin.js"></script>
 </body>
 
 </html>
