--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -28,7 +28,7 @@
                 <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
                 <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
                 <li id="menuItem"><a href="">My profile</a></li>
-                <li id="" menuItem><a href="./index.html">signOut</a></li>
+                <li id="signOut"><a href="./index.html">signOut</a></li>
             </ul>
         </nav>
     </header>
@@ -94,6 +94,7 @@
     </footer>
 
     <script src="./js/index.js"></script>
+    <script src="./js/checksignin.js"></script>
 </body>
 
 </html>
