--- a/frontend/searchresults.html
+++ b/frontend/searchresults.html
@@ -28,7 +28,7 @@
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="">My Profile</a></li>
-        <li id="" menuItem><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
   </header>
@@ -109,6 +109,7 @@
   </main>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/searchresults.js"></script>
+  <script src="./js/checksignin.js"></script>
 </body>
 
 </html>
