--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -21,7 +21,7 @@
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
-        <li id="" menuItem><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
   </header>
@@ -33,6 +33,7 @@
       </div>
     </div>
   </main>
+  <script src="./js/checksignin.js"></script>
   <script src="./js/recipeResult.js"></script>
 </body>
 
