--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -40,7 +40,7 @@
         <li id="menuItem"><a id="active" href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurants</a></li>
         <li id="menuItem"><a href="">My profile</a></li>
-        <li id="" menuItem><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
   </header>
@@ -51,6 +51,7 @@
     </div>
     <div id='map'></div>
   </div>
+  <script src="./js/checksignin.js"></script>
   <script src="./js/restaurants.js"></script>
 </body>
 
