--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,13 +19,14 @@
 <body>
   <main>
     <div id="loginFormDiv">
-      <img src="./images/logoIcon.png" alt="">
+      <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
         <input id="loginFormEmail" type="text" placeholder="email@email.com">
         <input id="loginFormPassword" type="password" placeholder="password">
         <input type="submit" value="LOGIN">
+        <h4 id="signupLink">Or <a href="./signup.html">signUp</a></h4>
       </form>
-      <h4 id="signupLink">Or <a href="./signup.html">signUp</a></h4>
+
     </div>
   </main>
   <script src="./js/login.js"></script>
