--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -19,11 +19,11 @@
 <body>
   <main>
     <div id="loginFormDiv">
-      <img src="./images/logoIcon.png" alt="">
+      <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
         <input id="loginFormName" type="text" placeholder="John Doe">
         <input id="loginFormEmail" type="email" placeholder="email@email.com">
-        <input id="loginFormPhone" type="number" placeholder="047852145">
+        <input id="loginFormPhone" type="tel" placeholder="047852145">
         <input id="loginFormPassword" type="password" placeholder="password">
         <input type="submit" value="REGISTER">
       </form>
