--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,10 @@
     <div id="loginFormDiv">
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
-        <input id="loginFormEmail" type="text" placeholder="email@email.com">
-        <input id="loginFormPassword" type="password" placeholder="password">
+        <label for="loginFormEmail">Email or phone</label>
+        <input id="loginFormEmail" type="text" placeholder="email@email.be">
+        <label for="loginFormPassword">Password</label>
+        <input id="loginFormPassword" type="password" placeholder="******">
         <input type="submit" value="LOGIN">
         <h4 id="signupLink">Or <a href="./signup.html">signUp</a></h4>
       </form>
