--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -21,11 +21,15 @@
     <div id="loginFormDiv">
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
+        <label for="loginFormName">Name</label>
         <input id="loginFormName" type="text" placeholder="John Doe">
+        <label for="loginFormEmail">Email</label>
         <input id="loginFormEmail" type="email" placeholder="email@email.com">
+        <label for="loginFormPhone">Phone</label>
         <input id="loginFormPhone" type="tel" placeholder="047852145">
+        <label for="loginFormPassword">Password</label>
         <input id="loginFormPassword" type="password" placeholder="password">
-        <input type="submit" value="REGISTER">
+        <input type="submit" value="SIGNUP">
       </form>
       <h4 id="signupLink">Or <a href="./index.html">login</a></h4>
     </div>
