--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -92,7 +92,7 @@
     <footer id="footer">
 
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="./js/index.js"></script>
     <script src="./js/checksignin.js"></script>
 </body>
