--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -28,10 +28,10 @@
         <label for="loginFormPhone">Phone</label>
         <input id="loginFormPhone" type="tel" placeholder="047852145">
         <label for="loginFormPassword">Password</label>
-        <input id="loginFormPassword" type="password" placeholder="password">
+        <input id="loginFormPassword" type="password" placeholder="*******">
         <input type="submit" value="SIGNUP">
       </form>
-      <h4 id="signupLink">Or <a href="./index.html">login</a></h4>
+      <h4 id="signupLink">Or <a href="./index.html"><span>login</span></a></h4>
     </div>
   </main>
   <script src="./js/register.js"></script>
