--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
         <label for="loginFormPassword">Password</label>
         <input id="loginFormPassword" type="password" placeholder="******">
         <input type="submit" value="LOGIN">
-        <h4 id="signupLink">Or <a href="./signup.html">signUp</a></h4>
+        <h4 id="signupLink"><a href="./signup.html">Not an account? <span>signUp</span></a></h4>
       </form>
 
     </div>
