--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -20,7 +20,7 @@
         <li id="menuItem"><a id="active" href="./index.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
-        <li id="menuItem"><a href="">My profile</a></li>
+        <li id="menuItem"><a href="./profile.html">My profile</a></li>
         <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
