--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -22,16 +22,16 @@
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
         <label for="loginFormName">Name</label>
-        <input id="loginFormName" type="text" placeholder="John Doe">
+        <input id="loginFormName" required type="text" placeholder="John Doe">
         <label for="loginFormEmail">Email</label>
-        <input id="loginFormEmail" type="email" placeholder="email@email.com">
+        <input id="loginFormEmail" required type="email" placeholder="email@email.com">
         <label for="loginFormPhone">Phone</label>
         <input id="loginFormPhone" type="tel" placeholder="047852145">
         <label for="loginFormPassword">Password</label>
-        <input id="loginFormPassword" type="password" placeholder="*******">
+        <input id="loginFormPassword" required type="password" placeholder="*******">
         <input type="submit" value="SIGNUP">
       </form>
-      <h4 id="signupLink">Or <a href="./index.html"><span>login</span></a></h4>
+      <h4 id="signupLink"><a href="./index.html">Or <span>login</span></a></h4>
     </div>
   </main>
   <script src="./js/register.js"></script>
