--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <ul>
-        <li id="menuItem"><a id="active" href="./index.html">Recipes</a></li>
+        <li id="menuItem"><a id="active" href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
         <li id="menuItem"><a href="./profile.html">My profile</a></li>
