--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -12,7 +12,7 @@
   <header>
     <nav id="menu">
       <div id="logoBackground">
-        <a href="./index.html">
+        <a href="./recipes.html">
           <img src="./images/logo.png" alt="">
         </a>
       </div>
