--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,10 +21,10 @@
     <div id="loginFormDiv">
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
-        <label for="loginFormEmail">Email or phone</label>
-        <input id="loginFormEmail" type="text" placeholder="email@email.be">
-        <label for="loginFormPassword">Password</label>
-        <input id="loginFormPassword" type="password" placeholder="******">
+        <label for="loginFormEmail">Email or phone:</label>
+        <input id="loginFormEmail" type="text">
+        <label for="loginFormPassword">Password:</label>
+        <input id="loginFormPassword" type="password">
         <input type="submit" value="LOGIN">
         <h4 id="signupLink"><a href="./signup.html">Not an account? <span>signUp</span></a></h4>
       </form>
