--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -21,14 +21,14 @@
     <div id="loginFormDiv">
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
-        <label for="loginFormName">Name</label>
-        <input id="loginFormName" required type="text" placeholder="John Doe">
-        <label for="loginFormEmail">Email</label>
-        <input id="loginFormEmail" required type="email" placeholder="email@email.com">
-        <label for="loginFormPhone">Phone</label>
-        <input id="loginFormPhone" type="tel" placeholder="047852145">
-        <label for="loginFormPassword">Password</label>
-        <input id="loginFormPassword" required type="password" placeholder="*******">
+        <label for="loginFormName">Name:</label>
+        <input id="loginFormName" required type="text">
+        <label for="loginFormEmail">Email:</label>
+        <input id="loginFormEmail" required type="email">
+        <label for="loginFormPhone">Phone:</label>
+        <input id="loginFormPhone" type="tel">
+        <label for="loginFormPassword">Password:</label>
+        <input id="loginFormPassword" required type="password">
         <input type="submit" value="SIGNUP">
       </form>
       <h4 id="signupLink"><a href="./index.html">Or <span>login</span></a></h4>
