add and delete favorites search results

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
       <img src="./images/logoLogin.png" alt="">
       <form action="" id="loginForm">
         <label for="loginFormEmail">Email or phone:</label>
-        <input id="loginFormEmail" type="text">
+        <input id="loginFormEmail" autofocus type="text">
         <label for="loginFormPassword">Password:</label>
         <input id="loginFormPassword" type="password">
         <input type="submit" value="LOGIN">
