--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -20,7 +20,6 @@
         <li id="menuItem"><a id="active" href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
-        <li id="menuItem"><a href="./profile.html">My profile</a></li>
         <li id="signOut"><a href="./index.html">signOut</a></li>
       </ul>
     </nav>
@@ -29,6 +28,7 @@
     <div id="recipe">
     </div>
     <div id="similarRecipes">
+      <h2>Similar Recipes:</h2>
       <div id="similar">
       </div>
     </div>
