--- a/frontend/addRestaurant.html
+++ b/frontend/addRestaurant.html
@@ -33,7 +33,7 @@
         <li id="menuItem"><a href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a id="active" href="">Add restaurant</a></li>
-        <li id="signOut"><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">sign out</a></li>
       </ul>
     </nav>
 
