--- a/frontend/recipes.html
+++ b/frontend/recipes.html
@@ -27,7 +27,7 @@
                 <li id="menuItem"><a id="active" href="">Recipes</a></li>
                 <li id="menuItem"><a href="./restaurants.html">Restaurants</a></li>
                 <li id="menuItem"><a href="./addRestaurant.html">Add restaurant</a></li>
-                <li id="signOut"><a href="./index.html">signOut</a></li>
+                <li id="signOut"><a href="./index.html">sign out</a></li>
             </ul>
         </nav>
     </header>
