--- a/frontend/restaurants.html
+++ b/frontend/restaurants.html
@@ -39,7 +39,7 @@
         <li id="menuItem"><a href="./recipes.html">Recipes</a></li>
         <li id="menuItem"><a id="active" href="./restaurants.html">Restaurants</a></li>
         <li id="menuItem"><a href="./addRestaurant.html">Add restaurants</a></li>
-        <li id="signOut"><a href="./index.html">signOut</a></li>
+        <li id="signOut"><a href="./index.html">sign out</a></li>
       </ul>
     </nav>
   </header>
