--- a/frontend/recipeResult.html
+++ b/frontend/recipeResult.html
@@ -33,6 +33,7 @@
       </div>
     </div>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="./js/checksignin.js"></script>
   <script src="./js/recipeResult.js"></script>
 </body>
